--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -10,10 +10,10 @@ spring:
     view: 
       prefix: /WEB-INF/view/ #JSP파일이 위치한 디렉토리 접두사를 설정합니다.
       suffix: .jsp #뷰 이름에 자동으로 추가될 파일 확장자를 설정합니다.
-    servlet:
-      multipart:
-        max-file-size: 20MB #파일 용량 설정 최대 20MB   
-        max-request-size: 20MB
+  servlet:
+    multipart:
+      max-file-size: 20MB #파일 최대 크기 20MB   
+      max-request-size: 20MB #멀티파트 전체 요청 크기 20MB제한
   datasource:
     url: jdbc:mysql://localhost:3306/mybank?serverTimeZone=Asia/Seoul
     driver-class-name: com.mysql.cj.jdbc.Driver
